# DIO-python-tdd-fastapi-store_api

./: .env  Makefile  README.md  compose.yml  pyproject.toml
store_api/: main.py  routers.py
store_api/controllers/: product.py
store_api/core/: exceptions.py
store_api/db/: mongo.py
store_api/models/: base.py  product.py
store_api/schemas/: base.py  product.py
store_api/usecases/: product.py
tests/: conftest.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/schemas/__snapshots__/: test_product.ambr
tests/usecases/: test_product.py
